--- a/index0.html
+++ b/index0.html
@@ -24,9 +24,10 @@
 	</pre>
 	<script>
 		// STEP 1: Grab the HTML elements we need for the interaction
-			
+		var verseChoose = document.querySelector('select');
+		var poemDisplay = document.querySelector('pre');
 		// STEP 2: Build out the event handler for the SELECT element
-		
+		verseChoose.onchange = function(){
 		// STEP 3: Construct updateDisplay() function
 		
 			// STEP 4: Declare and initialize URL to point to text file(s)
@@ -34,7 +35,8 @@
 			// STEP 5: Build fetch() with promises
 
 		// STEP 6: Initialize the app with Verse 1
-
+		
+		}
 		// This page inspired by and adapted from https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Fetching_data
 
 		</script>
