--- a/index0.html
+++ b/index0.html
@@ -30,7 +30,7 @@
 		verseChoose.onchange = function(){
 			var verse = verseChoose.value;
 			console.log(verse);
-			//updateDisplay(verse);
+			updateDisplay(verse);
 		}
 		// STEP 3: Construct updateDisplay() function
 		function updateDisplay(verse){
