--- a/index1.html
+++ b/index1.html
@@ -15,9 +15,9 @@
       }
     </style>
     <!-- STEP 1: Point your app to the MapQuest JavaScript library at their CDN (https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js) -->
-
+    <script src = "https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
     <!-- STEP 2: Also, add the CSS that goes along with it, also served up from their CDN (https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css) -->
-    
+    <link href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css" rel = "stylesheet" />
     <script>
       // STEP 3: Create a variable to contain a map layer (use 'L')
       
