--- a/index1.html
+++ b/index1.html
@@ -28,7 +28,7 @@
         L.mapquest.key = "LoABz4LqlvsMfXaWDbKSUpll4SwgubQo";
         // STEP 6a: Create a var representing the actual map, using the mapquest.map method - the first parameter is the ID of the HTML element to contain the map
         var map = L.mapquest.map("map", {
-          center: [],
+          center: [44.366679, -79.626296],
           layers: L.mapquest.tileLayer("map"),
           zoom: 12
         });
