--- a/index1.html
+++ b/index1.html
@@ -38,7 +38,7 @@
         // STEP 7c: Set the initial zoom level in the above object (1-18)
 
         // STEP 8: Add the traffic layer
-        
+        map.addLayer(L.mapquest.trafficLayer());
         // STEP 9: Add the incidents layer
         
         // STEP 10: Add a custom marker to the map
